--- a/view/header.inc.htm
+++ b/view/header.inc.htm
@@ -41,7 +41,7 @@
           <? if(empty($gid)) { ?>
           <li>
             <div class="NotificationsDropdown">
-              <a href="http://hgnzb.com/plugin/xn_qq_login/qq_login.php?action=login" class="Dropdown-toggle Button Button--flat NotificationsDropdown-button">
+              <a href="plugin/xn_qq_login/qq_login.php?action=login" class="Dropdown-toggle Button Button--flat NotificationsDropdown-button">
                 <span class="Button-icon"><i class="icon fa fa-fw fa-qq "></i></span>
               </a>
             </div>
