板块描述调用

--- a/view/forum.htm
+++ b/view/forum.htm
@@ -12,7 +12,7 @@
             </button>
             <div class="containerNarrow">
               <h2 class="Hero-title"><?php echo $forum['name']; ?></h2>
-              <div class="Hero-subtitle">本站支持QQ快捷登录方式，省去注册烦恼，保证帐号安全。</div>
+              <div class="Hero-subtitle"><?php echo $forum['brief']; ?>。</div>
             </div>
           </div>
         </div>
