更改content内容为论坛描述

--- a/view/doctype.inc.htm
+++ b/view/doctype.inc.htm
@@ -26,7 +26,7 @@
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="小众程序"/>
+  <meta name="apple-mobile-web-app-title" content="<?php echo $header['description']; ?>"/>
   <link rel="apple-touch-icon-precomposed" href="static/app-icon72x72@2x.png">
 
   <link rel="stylesheet" href="pc/view/css/forum.css">
