增加板块名称及链接

--- a/view/forum.htm
+++ b/view/forum.htm
@@ -11,8 +11,8 @@
               <i class="icon fa fa-fw fa-times Button-icon close"></i>
             </button>
             <div class="containerNarrow">
-              <h2 class="Hero-title"><?php echo $forum['name']; ?></h2>
-              <div class="Hero-subtitle"><?php echo $forum['brief']; ?>。</div>
+              <h2 class="Hero-title"><a href="forum-<?php echo $forum['fid']; ?>.htm"><?php echo $forum['name']; ?></a></h2>
+              <div class="Hero-subtitle"><?php echo $forum['brief']; ?></div>
             </div>
           </div>
         </div>
