增加板块名称及链接

--- a/view/thread.htm
+++ b/view/thread.htm
@@ -7,6 +7,7 @@
 		    <div class="Hero WelcomeHero">
 		    	<div class="container">
 		    		<div class="containerNarrow">
+		    		<h2 class="Hero-title"><a href="forum-<?php echo $forum['fid']; ?>.htm"><?php echo $forum['name']; ?></a></h2>
 		    			<h2 class="Hero-title" pid="<?php echo $first['pid']; ?>"><?php echo $thread['subject']; ?></h2>
 		    		</div>
 		    	</div>
