删除多余符号
说明后面多了一个句号,去除掉了

--- a/view/forum.htm
+++ b/view/forum.htm
@@ -12,7 +12,7 @@
             </button>
             <div class="containerNarrow">
               <h2 class="Hero-title"><?php echo $forum['name']; ?></h2>
-              <div class="Hero-subtitle"><?php echo $forum['brief']; ?>。</div>
+              <div class="Hero-subtitle"><?php echo $forum['brief']; ?></div>
             </div>
           </div>
         </div>
