修正首页帖子无法选中操作的问题
原先删除的 script 代码，有些有用。

--- a/flarum/view/index.htm
+++ b/flarum/view/index.htm
@@ -140,5 +140,11 @@
 
     <? include "./flarum/view/footer.inc.htm"; ?>
   </div>
+<script>
+render_threadlist();
+thread_list_script();
+forumlist_active(fid);
+document_scroll_top();
+</script>
 </body>
 </html>
